--- a/task2/task2.html
+++ b/task2/task2.html
@@ -8,51 +8,50 @@
   </head>
   
   <body>
-    <div class="sign1">
-      <h1>Sign in</h1>
-      <p>Stay updated on your professional world</p>
-      <input type="email" name="email" id="email" placeholder="Email or Phone"/>
-      <input type="password" name="pass" id="pass" placeholder="Password" />
-      <a href="#">Forgot password?</a> 
-      <button>Sign in</button> 
-      <button id="apple"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" 
-       alt="Apple Logo" >sign in with Apple</button>
-    </div>
+   <div class="sign1">
+    <h1>Sing in </h1>
+    <p>Stay updated on your professional world</p>
+    <input type="email" name="email" id="email" placeholder="Email or phone">
+    <input type="password" name="pass" id="pass" placeholder="passwoerd">
+    <a href="">forgot password</a>
+    <button>Sign in</button>
+    <hr>
+    <button id="apple">Sign in with Apple</button>
+   </div>
 
+<br><br><br><br><br><br>
 
-    <div class="sign2">
-        <label for="email">Eamil</label><br>
-        <input type="email" name="email" id="email"><br>
-        <label for="pass">Password</label><br>
-        <input type="password" name="pass" id="pass"> <br>
-        <button>Login</button>
-    </div>
+   <div class="sign2">
+    <label for="email">Email</label><br>
+    <input type="email" name="email" id="email"><br>
+    <label for="passwoerd">Passwoerd</label><br>
+    <input type="password" name="pass" id="pass"><br>
+    <button>Login</button>
+   </div>
 
+   <div class="background1">
+   <div class="sign3">
+    <h1>Login</h1>
+    <input type="email" name="email" id="email" placeholder="Email"><br>
+    <input type="password" name="pass" id="pass" placeholder="password"><br>
+    <input type="checkbox" name="Spass" id="Spass" >
+    <label for="Spass">show passwoerd</label><br>
+    <button>SIGN IN</button><br>
+    <p>Forgot <span>username / password </span>? <br> 
+    <span>don't have an account</span> ? Sing up</p>
+   </div>
+   </div>
 
-    <div class="formBackground">
-        <div class="sign3">
-        <h1>Login</h1>
-        <input type="email" name="email" id="email" placeholder="Email "/>
-        <input type="password" name="pass" id="pass" placeholder="Password" />
-        <input type="checkbox" name="show" id="show">
-        <label for="show"> Show Password</label> <br>
-        <button>Sign in</button> 
-        <p>forgot <span>Username / Password</span>?</p>
-        <p>Don't have an account? <span>Sign up</span></p>
-        </div>
-    </div>
-    
-        
-    <div class="formBackground2">
-        <div class="sign4">
-        <h1>USER LOGIN</h1>
-        <label for="email">Username</label><br>
-        <input type="email" name="email" id="email"/>
-        <label for="pass">Password</label><br>       
-        <input type="password" name="pass" id="pass"/>
-        <button>Sign in</button> 
-        <p>Forgot Password?</p>
-        </div>
-    </div>
+   <div class="background2">
+   <div class="sign4">
+    <h1>USER LOGIN</h1>
+    <label for="email">username</label><br>
+    <input type="email" name="email" id="email"><br>
+    <label for="pass">passwoerd</label><br>
+    <input type="password" name="pass" id="pass"><br>
+    <button><b>LOGIN</b></button>
+    <p>forgot passwoerd?</p>
+   </div>
+   </div>
   </body>
 </html>
