--- a/task 3/task3.html
+++ b/task 3/task3.html
@@ -7,33 +7,38 @@
     <link rel="stylesheet" href="task3.css">
   </head>
   <body>
-    <div class="sign5">
-      <h1>Sign Up</h1>
-      <input type="text" name="fnmae" id="fname" placeholder="FirstName">
-      <input type="text" name="lnmae" id="lname" placeholder="Last Name">
-      <input type="email" name="email" id="email" placeholder="Email " />
-      <input type="password" name="pass" id="pass" placeholder="Password" />
-      <input type="password" name="pass" id="pass" placeholder="Confirm Password" />
-      <input type="checkbox" name="show" id="show" />
-      <label for="show"> i accept the Terms of Use & Privacy Policy</label> <br />
-      <button>Sign in</button>
-      <p>Already have an account? <span>Login here</span></p>
+    <div class="background1">
+    <div class="sign1">
+    <h1>Sign Up</h1>
+    <input type="text" name="fn" id="fn" placeholder="First Name"> 
+    <input type="text" name="ln" id="ln" placeholder="First Name"><br>
+    <input type="email" name="email" id="email" placeholder="Email"><br>
+    <input type="password" name="pass" id="pass" placeholder="Password"><br>
+    <input type="password" name="cp" id="cp" placeholder="Confirm Password"><br>
+    <input type="checkbox" name="t&p" id="t&p">
+    <label for="t&p">i accept the Terms of Use & Privacy Policy</label><br>
+    <button>Sign Up</button>
+    <p>Already have an account? <a href="">Login here</a></p>
       <p>Copyright @ YourCompany.com</p>
     </div>
+  </div>
 
+  <br><br><br><br>
 
-    <div class="formBackground">
-        <div class="sign6">
-        <img src="laptop.png" alt="laptop logo" class="login-img">
-         <div class="form-content">
-        <h1>Member Login</h1>
-        <input type="email" name="email" id="email" placeholder="Email "/>
-        <input type="password" name="pass" id="pass" placeholder="Password" />
-        <button>Sign in</button> 
-        <p>Forgot <span>Username / Password?</span></p>
-        <span id="spn">Create your account</span>
-        </div>
-        </div>
-    </div>
+  <div class="background2">
+  <div class="sign2">
+    <img src="432787.png" alt="laptop logo" class="img">
+  <div class="sign2f">
+    <h1>Member Login</h1>
+    <input type="email" name="email" id="email" placeholder="Email"><br>
+    <input type="password" name="pass" id="pass" placeholder=".............."><br>
+    <button>LOGIN</button><br>
+    <p>forgot <a href="" style="color: rgb(9, 230, 64);">username / password ?</a></p>
+    <p><a href="" style="color: rgb(9, 230, 64);">Create your account -></a></p>
+  </div>
+  </div>
+  </div>
+
+  
   </body>
 </html>
